Единый центр сервисов / 2nd sprint

--- a/dpo.html
+++ b/dpo.html
@@ -9,7 +9,10 @@
   <body>
     <header>
       <a href="index.html"><img src="img/logo.svg" alt="logo"></a>
-      <a href="#">Контакты</a>
+      <div class="call_header">
+      <a href="#footer"><img src="img/call_icon.png" alt="call" 
+        style="max-width: 15px;"> Контакты</a>
+    </div>
     </header>
 
     <nav>
@@ -31,32 +34,61 @@
     <section class="action-section">
       <h2>Уровни и виды программ ДПО </h2>
       <div class="action-flex-container">
-        <div class="action-container">
-          <p>MBA</p>
-          <img src="img/chevron.svg" alt="chevron">
-        </div>
-        <div class="action-container">
-          <p>Mini-MBA</p>
-          <img src="img/chevron.svg" alt="chevron">
-        </div>
-        <div class="action-container">
-          <p>Профессиональная переподготовка</p>
-          <img src="img/chevron.svg" alt="chevron">
-        </div>
-        <div class="action-container">
-          <p>Повышение квалификации</p>
-          <img src="img/chevron.svg" alt="chevron">
-        </div>
-        <div class="action-container">
-          <p>Профессиональное обучение</p>
-          <img src="img/chevron.svg" alt="chevron">
-        </div>
+
+        <a href="#">
+          <div class="action-container large">
+              <div class="deep-link-text">
+                <h3>MBA</h3>
+                <p>Получите высокую ступень в&nbsp;сфере бизнес-образования, позволяющую развивать навыки стратегического управления, использовать инструменты повышения эффективности и&nbsp;развития бизнеса</p>
+              </div>
+            </div>
+        </a>
+
+          <a href="#">
+            <div class="action-container large">
+              <div class="deep-link-text">
+                <h3>Mini-MBA</h3>
+                <p>Получите бизнес-образование в&nbsp;специализированной сфере деятельности</p>
+              </div>
+            </div>
+          </a>
+
+          <a href="#"><div class="action-container large">
+              <div class="deep-link-text">
+                <h3>Профессиональная переподготовка</h3>
+                <p>Станьте профессионалом в&nbsp;новой сфере деятельности, получите новые идеи и&nbsp;специализированные инструменты для достижения профессиональных целей и&nbsp;развития бизнеса</p>
+              </div>
+            </div>
+          </a>
+
+          <a href="#">
+            <div class="action-container large">
+              <div class="deep-link-text">
+                <h3>Повышение квалификации</h3>
+                <p>Получите в&nbsp;сжатые сроки новые знания и&nbsp;прикладные навыки в&nbsp;различных областях, необходимые для карьерного роста</p>
+              </div>
+            </div>
+          </a>
+
+          <a href="#">
+            <div class="action-container large">
+              <div class="deep-link-text">
+                <h3>Профессиональное обучение</h3>
+                <p>Приобретите профессиональные знания и&nbsp;компетенции, необходимые для рабочих профессий</p>
+              </div>
+            </div>
+          </a>
       </div>
     </section>
+
 
     <section class="carusel">
       <img src="img/carusel_dpo_1.png" alt="carusel_dpo_1">
       <img src="img/carusel_dpo_2.png" alt="carusel_dpo_2">
+      <img src="img/carusel_dpo_3.png" alt="carusel_dpo_3">
+      <img src="img/carusel_dpo_4.png" alt="carusel_dpo_4">
+      <img src="img/carusel_dpo_5.png" alt="carusel_dpo_5">
+
     </section>
 
     <section class="action-section">
@@ -122,39 +154,11 @@
           <img src="img/link-arrow.svg" alt="link-arrow">
         </div></a>
 
-        <a href="https://do.rea.ru/distantsionnoe-obuchenie"><div class="action-container">
+        <a href="https://do.rea.ru/distantsionnoe-obuchenie">
+          <div class="action-container">
           <p>Дистанционное обучение</p>
           <img src="img/link-arrow.svg" alt="link-arrow">
         </div></a>
-
-
-
-
-
-        <!-- <div class="action-container">
-          <p>Маркетинг и&nbsp;продажи</p>
-          <img src="img/link-arrow.svg" alt="link-arrow">
-        </div>
-        <div class="action-container">
-          <p>Предпринимательство, логистика и&nbsp;закупки</p>
-          <img src="img/link-arrow.svg" alt="link-arrow">
-        </div>
-        <div class="action-container">
-          <p>Финансы и&nbsp;управление инвестициями</p>
-          <img src="img/link-arrow.svg" alt="link-arrow">
-        </div>
-        <div class="action-container">
-          <p>Цифровая экономика</p>
-          <img src="img/link-arrow.svg" alt="link-arrow">
-        </div>
-        <div class="action-container">
-          <p>Языковая подготовка</p>
-          <img src="img/link-arrow.svg" alt="link-arrow">
-        </div>
-        <div class="action-container">
-          <p>Дистанционное обучение</p>
-          <img src="img/link-arrow.svg" alt="link-arrow">
-        </div> -->
       </div>
     </section>
 
@@ -162,12 +166,18 @@
       <h2>Наши клиенты</h2>
       <div class="carusel">
         <img src="img/bank.png" alt="minpromtorg">
-        <img src="img/gbu.png" alt="duma">
         <img src="img/nalog.png" alt="rosneft">
-        <img src="img/vtb.png" alt="deptrans">
-        <img src="img/gaz.png" alt="deptrans">
-        <img src="img/minsport.png" alt="deptrans">
+        <img src="img/vtb.png" alt="vtb">
+        <img src="img/gaz.png" alt="gazprom">
+        <img src="img/minsport.png" alt="minsport">
+        <img src="img/rosteh.png" alt="rostekh">
         <img src="img/gerb.png" alt="deptrans">
+        <img src="img/foms.png" alt="foms">
+        <img src="img/palata.png" alt="palata">
+        <img src="img/gbu.png" alt="gbu">
+        <img src="img/msp.png" alt="msp">
+
+
       </div>
     </section>
 
@@ -199,22 +209,22 @@
       </div>
     </section>
 
-    <footer>
+    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A7f150e2bebeb9b6419079579f9c83d05f22cb1bbf3ef9a1a510f0a58972f599c&amp;width=100%25&amp;height=500&amp;lang=ru_RU&amp;scroll=true"></script>
+    <footer id="footer">
       <div class="white-logo">
         <img src="img/white-logo.png" alt="white-logo">
         <p>&copy;&nbsp;Единый центр сервисов ФГБОУ ВО&nbsp;&laquo;РЭУ им. Г.В. Плеханова&raquo;</p>
       </div>
-
-
+     
       <div class="links">
         <div class="footer-link">
-          <p>Исследования, Экспертиза, Консалтинг</p>
+          <p>Исследования, экспертиза, консалтинг</p>
           <a href="tel:+7 (495) 800-12-00">+7 (495) 800-12-00 (доб. 1941)</a>
           <a href="mailto: nauka@rea.ru">nauka@rea.ru</a>
         </div>
 
         <div class="footer-link">
-          <p>MBA, Повышение квалификации и Тренинги</p>
+          <p>MBA, ДПО и тренинги</p>
           <a href="tel:+7 (495) 152-85-82">+7 (495) 152-85-82 (доб. 1753)</a>
           <a href="mailto: crdpo@rea.ru">crdpo@rea.ru</a>
         </div>
@@ -227,9 +237,8 @@
       </div>
 
       <div class="bottom">
-        <p><a href="#">Официальный сайт Университета</a></p>
-        <p><a href="#">Политика конфиденциальности</a></p>
-        <p>All rights reserved</p>
+        <p><a href="https://www.rea.ru/" style="text-decoration: none;">Официальный сайт Университета</a></p>
+        <p><a href="https://do.rea.ru/politika-konfidentsialnosti" style="text-decoration: none;">Политика конфиденциальности</a></p>
       </div>
     </footer>
 
