--- a/equipment.html
+++ b/equipment.html
@@ -10,7 +10,10 @@
 
     <header>
       <a href="index.html"><img src="img/logo.svg" alt="logo"></a>
-      <a href="#">Контакты</a>
+      <div class="call_header">
+      <a href="#footer"><img src="img/call_icon.png" alt="call" 
+        style="max-width: 15px;"> Контакты</a>
+    </div>
     </header>
 
     <nav>
@@ -32,56 +35,164 @@
     <section class="action-section">
       <h2>Перечень услуг </h2>
       <div class="action-flex-container">
-        <div class="action-container">
-          <p>Изготовление и&nbsp;обработка материалов</p>
-          <img src="img/link-arrow.svg" alt="link-arrow">
-        </div>
+        <a href="https://plastlab.org/services/#matherials">
+          <div class="action-container">
+            <p>Изготовление и&nbsp;обработка материалов</p>
+            <img src="img/link-arrow.svg" alt="link-arrow">
+          </div>
+        </a>
 
-        <div class="action-container">
-          <p>Исследование структуры и химического состава</p>
-          <img src="img/link-arrow.svg" alt="link-arrow">
-        </div>
-        <div class="action-container">
-          <p>Физические и&nbsp;физико-химические испытания</p>
-          <img src="img/link-arrow.svg" alt="link-arrow">
-        </div>
-        <div class="action-container">
-          <p>Механические испытания</p>
-          <img src="img/link-arrow.svg" alt="link-arrow">
-        </div>
-        <div class="action-container">
-          <p>Термические и&nbsp;теплофизические испытания</p>
-          <img src="img/link-arrow.svg" alt="link-arrow">
-        </div>
-        <div class="action-container">
-          <p>Исследование стойкости и&nbsp;способности к&nbsp;деградации</p>
-          <img src="img/link-arrow.svg" alt="link-arrow">
-        </div>
-        <div class="action-container">
-          <p>Дополнительные услуги</p>
-          <img src="img/link-arrow.svg" alt="link-arrow">
-        </div>
+        <a href="https://plastlab.org/services/#structure">
+          <div class="action-container">
+            <p>Исследование структуры и химического состава</p>
+            <img src="img/link-arrow.svg" alt="link-arrow">
+          </div>
+        </a>
+
+        <a href="https://plastlab.org/services/#physics-chemistry">
+          <div class="action-container">
+            <p>Физические и&nbsp;физико-химические испытания</p>
+            <img src="img/link-arrow.svg" alt="link-arrow">
+          </div>
+        </a>
+
+        <a href="https://plastlab.org/services/#mechanica">
+          <div class="action-container">
+            <p>Механические испытания</p>
+            <img src="img/link-arrow.svg" alt="link-arrow">
+          </div>
+        </a>
+
+        <a href="https://plastlab.org/services/#thermo">
+          <div class="action-container">
+            <p>Термические и&nbsp;теплофизические испытания</p>
+            <img src="img/link-arrow.svg" alt="link-arrow">
+          </div>
+        </a>
+
+        <a href="https://plastlab.org/services/#degradation">
+          <div class="action-container">
+            <p>Исследование стойкости и&nbsp;способности к&nbsp;деградации</p>
+            <img src="img/link-arrow.svg" alt="link-arrow">
+          </div>
+        </a>
+
+        <a href="#">
+          <div class="action-container">
+            <p>Дополнительные услуги</p>
+            <img src="img/link-arrow.svg" alt="link-arrow">
+          </div>
+        </a>
       </div>
     </section>
 
     <section class="carusel">
         <img src="img/carusel_equip_1.png" alt="carusel_equip_1">
         <img src="img/carusel_equip_2.png" alt="carusel_equip_2">
+        <img src="img/carusel_equip_3.png" alt="carusel_equip_3">
+        <img src="img/carusel_equip_4.png" alt="carusel_equip_4">
+        <img src="img/carusel_equip_5.png" alt="carusel_equip_5">
+        <img src="img/carusel_equip_6.png" alt="carusel_equip_6">
+
     </section>
 
     <section class="action-section">
       <h2>Виды оборудования</h2>
-      <div class="action-flex-container">
+        <div class="action-container dropdown" id="onClickFirst">
+          <div class="deep-link-text">
+            <h3>Для испытаний и анализа</h3>
+            <div class="dropdown-par" id="dropdown-par-first">
+              <p>Подготовка компонентов</p>
+              <ul>
+                <li>&bull; Роторная ножевая мельница РМ&nbsp;120 Вибротехник (Россия)</li>
+                <li>&bull; Шаровая мельница BML-2&nbsp;DAIHAN Scientific, фарфоровые шары (Южная Корея)</li>
+                <li>&bull; Механическая ступка с&nbsp;электроприводом Powteq MG-200 (КНР)</li>
+                <li>&bull; Верхнеприводная погружная мешалка&nbsp;/ магнитная мешалка LABТЕХ OS-20LT (Россия)</li>
+                <li>&bull; Высокоскоростной диспергатор IKA T18 digital ULTRA TURRAX (КНР)</li>
+                <li>&bull; Ультразвуковая ванна Вилитек VBS-10DS двухчастотная 25&nbsp;и&nbsp;40&nbsp;кГц, с&nbsp;функцией дегазации (Россия)</li>
+                <li>&bull; Центрифуга EVA 200 Hettich (Германия)</li>
+                <li>&bull; Сушильный шкаф LOIP LF-120/300-VS2 (Россия)</li>
+              </ul>
+              <p>Подготовка компонентов</p>
+              <ul>
+                <li>&bull; Двухшнековый лабораторный смесительный экструдер EXL-18DF, dшн = 18&nbsp;мм (КНР)</li>
+                <li>&bull; Лабораторные смесительные вальцы UBL-6175-BL (КНР)</li>
+                <li>&bull; Двухроторный лабораторный смеситель Брабердер Plasticorder, смешение в&nbsp;инертной и&nbsp;кислородной атмосфере (Германия)</li>
+                <li>&bull; Одношнековый лабораторный экструдер Brabender Plasticorder (Германия)</li>
+                <li>&bull; Лабораторный гидравлический ручной пресс с&nbsp;нагревом РПА-12 Биолент (Россия)</li>
+                <li>&bull; Лабораторная однокапиллярная установка для электроформования из&nbsp;раствора ЭФВ-1 (Россия)</li>
+                <li>&bull; Экструдер для производства филамента Noztek Pro (Великобритания)</li>
+                <li>&bull; 3D-сканер Shining 3D&nbsp;Einscan-SE (КНР)</li>
+                <li>&bull; 3D-принтер Picaso 3D&nbsp;Designer X&nbsp;Pro (Россия)</li>
+              </ul>
+            </div>
+          </div>
+          <img src="img/chevron.svg" alt="chevron">
+        </div>
+
+          <div class="action-container dropdown" id="onClickSecond">
+            <div class="deep-link-text">
+              <h3>Для получения композитов</h3>
+              <div class="dropdown-par" id="dropdown-par-second">
+                <p>Структура и&nbsp;химический состав</p>
+                <ul>
+                  <li>&bull; Оптический микроскоп Axio Imager.Z2m, Carl Zeiss с&nbsp;ПО&nbsp;Axio Vision: в&nbsp;проходящем и&nbsp;отраженном свете (Германия)</li>
+                  <li>&bull; Оптический микроскоп Micromed Polar&nbsp;3 ToupCam 5.1&nbsp;MP: проходящий, отраженный, поляризованный свет (Россия)</li>
+                  <li>&bull; Световой микроскоп Axio Lab.A1 (Германия)</li>
+                  <li>&bull; ИК-Фурье спектрометр Spectrum 100 Perkin Elmer: НПВО, кристалл селенид цинка (Великобритания)</li>
+                  <li>&bull; ИК-Фурье микроскоп LUMOS Bruker: макромодуль, НПВО, картирование (Германия)</li>
+                  <li>&bull; Спектрофотометр UNICO 2800 Unico Sys, пропускание (США)</li>
+                  <li>&bull; Комплект для автоматического титрования ТИТРИОН Эконикс Эксперт (Россия)</li>
+                </ul>
+                <p>Физические и&nbsp;химические свойства</p>
+                <ul>
+                  <li>&bull; Аналитические весы с&nbsp;приставкой для гидростатического взвешивания AND GR-200 (Япония)</li>
+                  <li>&bull; Капиллярный вискозиметр ИИРТ-5М Метротекс (Россия)</li>
+                  <li>&bull; Ротационный вискозиметр раствора Брукфильда DV2T Brookfield, диапазон температур: +23оС до&nbsp;+100оС (США)</li>
+                  <li>&bull; Влагомер AGS 100&nbsp;AXIS (Польша)</li>
+                  <li>&bull; Ситовой анализатор на&nbsp;основе вибропривода Matest A059-02KIT (Италия)</li>
+                  <li>&bull; Тестер скорости паропередачи Labthink W3/031 (КНР)</li>
+
+                  <p>Механические свойства</p>
+                  <ul>
+                    <li>&bull; Универсальная испытательная машина GP&nbsp;UG&nbsp;5&nbsp;DLC-0,5&nbsp;DVT DEVOTRANS (Турция)</li>
+                    <li>&bull; Пневматический вырубной пресс GT-7016-AR GOTECH testing Machines Inc. (Тайвань)</li>
+
+                  <p>Теплофизические свойства</p>
+                  <ul>
+                    <li>&bull; Муфельная печь ЭКПС-10/1300 (Россия)</li>
+                    <li>&bull; Прибор синхронного термического анализа ​Mettler Toledo TGA/DSC3+ (Швейцария)</li>
+                    <li>&bull; Дифференциальный сканирующий калориметр теплового потока DSC 214 Polyma NETZSCH-Ger&auml;tebau: алюминиевые тигли, рабочий диапазон &minus;60...+250оС (Германия)</li>
+
+                  <p>Изучение стойкости и способности к&nbsp;деградации</p>
+                  <ul>
+                    <li>&bull; Манометрическая установка с&nbsp;поглощением летучих продуктов окисления твердым КОН</li>
+                    <li>&bull; Везерометр SUNTEST CPS Atlas (США)</li>
+                    <li>&bull; Климатическая камера Atlas MTS UV-Test (США)</li>
+                    <li>&bull; Озонатор ОГВК-01С (Россия)</li>
+                    <li>&bull; Микробиологическая установка ускоренного определения биодеградации материалов (модифицированный метод Штурма)</li>
+                </ul>
+              </div>
+            </div>
+            <img src="img/chevron.svg" alt="chevron">
+          </div>
+    </section>
+
+    <!-- <section class="action-section">
+      <h2>Виды оборудования</h2>
         <div class="icon action-container">
           <div class="icon">
             <img src="img/Settings.png" alt="Settings">
+            <div class="text">
+              <p>Для получения композитов</p>
+              <img src="img/chevron.svg" alt="chevron">
+            </div>
           </div>
-          <div class="text">
-            <p>Для получения композитов</p>
-            <img src="img/chevron.svg" alt="chevron">
-          </div>
-        </div>
+          <ul>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
+          </ul>
 
+        </div>
 
         <div class="icon action-container">
           <div class="icon">
@@ -92,15 +203,40 @@
             <img src="img/chevron.svg" alt="chevron">
           </div>
         </div>
-      </div>
-    </section>
+    </section> -->
 
     <section class="action-section">
       <h2>Контакты</h2>
       <div class="person">
         <div class="person-name">
+          <h3>Михайлов Игорь Анатольевич</h3>
+          <p>Директор Центра коллективного пользования</p>
+          </div>
+        <img src="img/ckp_director.png" alt="petr.png">
+      </div>
+
+      <div class="contacts">
+        <ul>
+          <li>Пн-Пт: 9:00&nbsp;&mdash; 17:00</li>
+          <li>Сб-Вс: выходной</li>
+        </ul>
+
+        <ul>
+          <li>г. Москва, Cтремянный пер., д.&nbsp;36</li>
+          <li>м. Cерпуховская, Добрынинская</li>
+        </ul>
+
+        <ul>
+          <li><a href="tel:+7 (499) 237-83-31">+7 (499) 237-83-31, добавочный&nbsp;1836</a></li>
+          <li><a href="mailto:ckb@rea.ru">ckp@rea.ru</a></li>
+        </ul>
+        <br></br>
+      </div>
+
+      <div class="person">
+        <div class="person-name">
           <h3>Пантюхов Пётр Васильевич</h3>
-          <p>Заведующий научно-исследовательской лабораторией РЭУ</p>
+          <p>Заведующий научно-исследовательской лабораторией «Перспективные композиционные материалы и технологии»</p>
         </div>
         <img src="img/petr.png" alt="petr.png">
       </div>
@@ -117,28 +253,29 @@
         </ul>
 
         <ul>
-          <li><a href="tel:+7 (499) 237-83-31">+7 (499) 237-83-31, доб.&nbsp;1811</a></li>
+          <li><a href="tel:+7 (499) 237-83-31">+7 (499) 237-83-31, добавочный&nbsp;1811</a></li>
           <li><a href="mailto:scilab@rea.ru">scilab@rea.ru</a></li>
         </ul>
       </div>
+
     </section>
 
-    <footer>
+    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A7f150e2bebeb9b6419079579f9c83d05f22cb1bbf3ef9a1a510f0a58972f599c&amp;width=100%25&amp;height=500&amp;lang=ru_RU&amp;scroll=true"></script>
+    <footer id="footer">
       <div class="white-logo">
         <img src="img/white-logo.png" alt="white-logo">
         <p>&copy;&nbsp;Единый центр сервисов ФГБОУ ВО&nbsp;&laquo;РЭУ им. Г.В. Плеханова&raquo;</p>
       </div>
-
-
+     
       <div class="links">
         <div class="footer-link">
-          <p>Исследования, Экспертиза, Консалтинг</p>
+          <p>Исследования, экспертиза, консалтинг</p>
           <a href="tel:+7 (495) 800-12-00">+7 (495) 800-12-00 (доб. 1941)</a>
           <a href="mailto: nauka@rea.ru">nauka@rea.ru</a>
         </div>
 
         <div class="footer-link">
-          <p>MBA, Повышение квалификации и Тренинги</p>
+          <p>MBA, ДПО и тренинги</p>
           <a href="tel:+7 (495) 152-85-82">+7 (495) 152-85-82 (доб. 1753)</a>
           <a href="mailto: crdpo@rea.ru">crdpo@rea.ru</a>
         </div>
@@ -151,11 +288,10 @@
       </div>
 
       <div class="bottom">
-        <p><a href="#">Официальный сайт Университета</a></p>
-        <p><a href="#">Политика конфиденциальности</a></p>
-        <p>All rights reserved</p>
+        <p><a href="https://www.rea.ru/" style="text-decoration: none;">Официальный сайт Университета</a></p>
+        <p><a href="https://do.rea.ru/politika-konfidentsialnosti" style="text-decoration: none;">Политика конфиденциальности</a></p>
       </div>
     </footer>
-
+    <script src="script.js"></script>
   </body>
 </html>
