--- a/trenings.html
+++ b/trenings.html
@@ -10,7 +10,10 @@
 
     <header>
       <a href="index.html"><img src="img/logo.svg" alt="logo"></a>
-      <a href="#">Контакты</a>
+      <div class="call_header">
+      <a href="#footer"><img src="img/call_icon.png" alt="call" 
+        style="max-width: 15px;"> Контакты</a>
+    </div>
     </header>
 
     <nav>
@@ -33,57 +36,41 @@
       <h2>Перечень тренингов </h2>
 
       <div class="action-flex-container">
-        <div class="action-container">
-          <p>Стресс-менеджмент</p>
-          <img src="img/chevron.svg" alt="chevron">
-        </div>
+        <a href="#">
+          <div class="action-container">
+            <p>Стресс-менеджмент</p>
+            <img src="img/link-arrow.svg" alt="link-arrow">
+          </div>
+        </a>
 
-        <div class="action-container">
-          <p>Управление отделом продаж (мотивация и найм сотрудников)</p>
-          <img src="img/chevron.svg" alt="chevron">
-        </div>
-        <div class="action-container">
-          <p>Машинное обучение: распознавание эмоций в тексте (OCR)</p>
-          <img src="img/chevron.svg" alt="chevron">
-        </div>
-        <div class="action-container">
-          <p>Искусство свободного общения</p>
-          <img src="img/chevron.svg" alt="chevron">
-        </div>
-        <div class="action-container">
-          <p>Техника ведения переговоров</p>
-          <img src="img/chevron.svg" alt="chevron">
-        </div>
-        <div class="action-container">
-          <p>Эффективный менеджмент и&nbsp;лидерство</p>
-          <img src="img/chevron.svg" alt="chevron">
-        </div>
-        <div class="action-container">
-          <p>Основы финансовой грамотности</p>
-          <img src="img/chevron.svg" alt="chevron">
-        </div>
-        <div class="action-container">
-          <p>6&nbsp;ошибок при разработке УТП, которые совершают даже известные мировые компании</p>
-          <img src="img/chevron.svg" alt="chevron">
-        </div>
-        <div class="action-container">
-          <p>Проектные продажи</p>
-          <img src="img/chevron.svg" alt="chevron">
-        </div>
-        <div class="action-container">
-          <p>Основы инвестиций в&nbsp;блокчейн и&nbsp;ICO</p>
-          <img src="img/chevron.svg" alt="chevron">
-        </div>
-        <div class="action-container">
-          <p>Личностное и&nbsp;профессиональное развитие</p>
-          <img src="img/chevron.svg" alt="chevron">
-        </div>
-        <div class="action-container">
-          <p>Финансы и&nbsp;управление инвестициями</p>
-          <img src="img/chevron.svg" alt="chevron">
-        </div>
+        <a href="#">
+          <div class="action-container">
+            <p>Управление отделом продаж (мотивация и найм сотрудников)</p>
+            <img src="img/link-arrow.svg" alt="link-arrow">
+          </div>
+        </a>
+
+        <a href="#">
+          <div class="action-container">
+            <p>Машинное обучение: распознавание эмоций в тексте (OCR)</p>
+            <img src="img/link-arrow.svg" alt="link-arrow">
+        </div></a>
+
+        <a href="#">
+          <div class="action-container">
+            <p>Основы финансовой грамотности</p>
+            <img src="img/link-arrow.svg" alt="link-arrow">
+          </div>
+        </a>
+
+        <a href="#">
+          <div class="action-container">
+            <p>Основы инвестиций в&nbsp;блокчейн и&nbsp;ICO</p>
+            <img src="img/link-arrow.svg" alt="link-arrow">
+          </div>
+        </a>
+
       </div>
-
     </section>
 
     <section class="action-section banner trenings">
@@ -101,7 +88,7 @@
       <div class="banner-small-container">
         <img src="img/customers.svg" alt="customers">
         <div class="banner-small-text">
-          <h3>Скидки до 20% бизнес-заказчикам</h3>
+          <h3>Доступны скидки корпоративным заказчикам</h3>
           <p>при заказе от&nbsp;2-х человек</p>
         </div>
       </div>
@@ -135,22 +122,22 @@
       </div>
     </section>
 
-    <footer>
+    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A7f150e2bebeb9b6419079579f9c83d05f22cb1bbf3ef9a1a510f0a58972f599c&amp;width=100%25&amp;height=500&amp;lang=ru_RU&amp;scroll=true"></script>
+    <footer id="footer">
       <div class="white-logo">
         <img src="img/white-logo.png" alt="white-logo">
         <p>&copy;&nbsp;Единый центр сервисов ФГБОУ ВО&nbsp;&laquo;РЭУ им. Г.В. Плеханова&raquo;</p>
       </div>
-
-
+     
       <div class="links">
         <div class="footer-link">
-          <p>Исследования, Экспертиза, Консалтинг</p>
+          <p>Исследования, экспертиза, консалтинг</p>
           <a href="tel:+7 (495) 800-12-00">+7 (495) 800-12-00 (доб. 1941)</a>
           <a href="mailto: nauka@rea.ru">nauka@rea.ru</a>
         </div>
 
         <div class="footer-link">
-          <p>MBA, Повышение квалификации и Тренинги</p>
+          <p>MBA, ДПО и тренинги</p>
           <a href="tel:+7 (495) 152-85-82">+7 (495) 152-85-82 (доб. 1753)</a>
           <a href="mailto: crdpo@rea.ru">crdpo@rea.ru</a>
         </div>
@@ -163,9 +150,8 @@
       </div>
 
       <div class="bottom">
-        <p><a href="#">Официальный сайт Университета</a></p>
-        <p><a href="#">Политика конфиденциальности</a></p>
-        <p>All rights reserved</p>
+        <p><a href="https://www.rea.ru/" style="text-decoration: none;">Официальный сайт Университета</a></p>
+        <p><a href="https://do.rea.ru/politika-konfidentsialnosti" style="text-decoration: none;">Политика конфиденциальности</a></p>
       </div>
     </footer>
 
