--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <body>
     <header>
       <a href="index.html"><img src="img/logo.svg" alt="logo"></a>
-      <a href="#">Контакты</a>
+      <div class="call_header">
+      <a href="#footer"><img src="img/call_icon.png" alt="call" 
+        style="max-width: 15px;"> Контакты</a>
+    </div>
     </header>
 
     <nav>
@@ -23,92 +26,109 @@
 
     <section class="main-page-title">
       <h1>Единый центр сервисов РЭУ им. Г.В. Плеханова</h1>
-      <p>Воспользуйтесь услугами одного из&nbsp;ведущих экономических вузов страны. Инновационные решения от&nbsp;экспертов с&nbsp;международным признанием</p>
-      <button class="button" type="button" name="button">Заказать обратный звонок</button>
+      <p>Воспользуйтесь услугами одного из&nbsp;ведущих экономических вузов страны. Инновационные решения от&nbsp;экспертов с&nbsp;международным признанием.</p>
+        <a href="https://do.rea.ru/">
+          <button class="button" type="button" name="button">Заказать обратный звонок</button>
+        </a>
     </section>
 
     <section class="carts">
-      <div class="section-cart">
-        <img src="img/university.png" alt="university">
-        <h2>Исследования, экспертиза, консалтинг</h2>
-        <p>Проведение исследований на&nbsp;базе лидирующего экономического вуза страны. Консалтинг и&nbsp;экспертиза с&nbsp;привлечением ведущих экспертов-практиков и&nbsp;ученых.</p>
-        <button type="button" class="button flex" name="button">
-          <span class="button-text">Подробнее</span>
-          <span class="button-icon">
-            <img src="img/button-icon.svg" alt="button-icon">
-          </span>
-        </button>
-      </div>
+      <a href="reserches.html">
+        <div class="section-cart">
+          <img src="img/university.png" alt="university">
+          <h2>Исследования, экспертиза, консалтинг</h2>
+          <p>Проведение исследований на&nbsp;базе лидирующего экономического вуза страны. Консалтинг и&nbsp;экспертиза с&nbsp;привлечением ведущих экспертов-практиков и&nbsp;ученых.</p>
+          <button type="button" class="button flex" name="button">
+            <span class="button-text">Подробнее</span>
+            <span class="button-icon">
+              <img src="img/button-icon.svg" alt="button-icon">
+            </span>
+          </button>
+        </div>
+      </a>
 
-      <div class="section-cart">
-        <img src="img/dpo.png" alt="dpo">
-        <h2>МВА, профессиональная переподготовка и&nbsp;ДПО</h2>
-        <p>Повысьте свой уровень знаний, овладейте новой специальностью, сделайте рывок в&nbsp;карьере. Получите престижный диплом Плехановского Университета.</p>
-        <button class="button flex" type="button" name="button">
-          <span class="button-text">Подробнее</span>
-          <span class="button-icon">
-            <img src="img/button-icon.svg" alt="button-icon">
-          </span>
-      </div>
+      <a href="dpo.html">
+        <div class="section-cart">
+          <img src="img/dpo.png" alt="dpo">
+          <h2>Программы МВА, профпереподготовка и курсы ДПО</h2>
+          <p>Повысьте свой уровень знаний, овладейте новой специальностью, сделайте рывок в&nbsp;карьере. Получите престижный диплом Плехановского Университета.</p>
+          <button class="button flex" type="button" name="button">
+            <span class="button-text">Подробнее</span>
+            <span class="button-icon">
+              <img src="img/button-icon.svg" alt="button-icon">
+            </span>
+          </button>
+        </div>
+      </a>
 
-      <div class="section-cart">
-        <img src="img/trening.png" alt="trening">
-        <h2>Обучение и&nbsp;тренинг сотрудников</h2>
-        <p>Хотите обучить сотрудников вашей компании? РЭУ предлагает компаниям подготовку уникального образовательного пакета для корпоративного обучения.</p>
-        <button class="button flex" type="button" name="button">
-          <span class="button-text">Подробнее</span>
-          <span class="button-icon">
-            <img src="img/button-icon.svg" alt="button-icon">
-          </span>
-      </div>
+      <a href="trenings.html">
+        <div class="section-cart">
+          <img src="img/trening.png" alt="trening">
+          <h2>Обучение и&nbsp;тренинг сотрудников</h2>
+          <p>Хотите обучить сотрудников вашей компании? РЭУ предлагает компаниям подготовку уникального образовательного пакета для корпоративного обучения.</p>
+          <button class="button flex" type="button" name="button">
+            <span class="button-text">Подробнее</span>
+            <span class="button-icon">
+              <img src="img/button-icon.svg" alt="button-icon">
+            </span>
+        </div>
+      </a>
 
-      <div class="section-cart">
-        <img src="img/equip.png" alt="equip">
-        <h2>Аренда оборудования и&nbsp;услуги лаборатории</h2>
-        <p>Арендуйте наше оборудование для самостоятельной работы уникальную технику или воспользуйтесь услугами квалифицированных специалистов Центра колелктивного пользования РЭУ.</p>
-        <button class="button flex" type="button" name="button">
-          <span class="button-text">Подробнее</span>
-          <span class="button-icon">
-            <img src="img/button-icon.svg" alt="button-icon">
-          </span>
-      </div>
+      <a href="equipment.html">
+        <div class="section-cart">
+          <img src="img/equip.png" alt="equip">
+          <h2>Оборудование и&nbsp;услуги лаборатории</h2>
+          <p>Воспользуйтесь уникальным оборудованием и сопутствующими услугами квалифицированных специалистов Центра коллективного пользования РЭУ</p>
+          <button class="button flex" type="button" name="button">
+            <span class="button-text">Подробнее</span>
+            <span class="button-icon">
+              <img src="img/button-icon.svg" alt="button-icon">
+            </span>
+          </button>
+        </div>
+      </a>
+
     </section>
 
       <section>
-        <div class="action-flex-container">
-          <div class="main-page action-container">
-            <p>Наши научные исследования</p>
-            <img src="img/link-arrow.svg" alt="link-arrow">
-          </div>
+          <a href="https://www.rea.ru/ru/org/managements/orgnirupr/Pages/effectiveness_of_research.aspx">
+            <div class="main-page action-container">
+              <p>Наши научные исследования</p>
+              <img src="img/link-arrow.svg" alt="link-arrow">
+            </div>
+          </a>
 
-          <div class="main-page action-container">
-            <p>Наши эксперты</p>
-            <img src="img/link-arrow.svg" alt="link-arrow">
-          </div>
+          <a href="https://www.rea.ru/ru/press/Pages/database-experts.aspx">
+            <div class="main-page action-container">
+              <p>Наши эксперты</p>
+              <img src="img/link-arrow.svg" alt="link-arrow">
+            </div>
+          </a>
 
-          <div class="main-page action-container">
-            <p>РЭУ Аналитика</p>
-            <img src="img/link-arrow.svg" alt="link-arrow">
-          </div>
-        </div>
+          <a href="https://analitica.rea.ru">
+            <div class="main-page action-container">
+              <p>РЭУ Аналитика</p>
+              <img src="img/link-arrow.svg" alt="link-arrow">
+            </div>
+          </a>
       </section>
 
-      <footer>
+      <footer id="footer">
         <div class="white-logo">
           <img src="img/white-logo.png" alt="white-logo">
-          <p>&copy;&nbsp;Единый центр сервисов ФГБОУ ВО<br>РЭУ им. Г.В. Плеханова&raquo;</p>
+          <p>&copy;&nbsp;Единый центр сервисов ФГБОУ ВО&nbsp;&laquo;РЭУ им. Г.В. Плеханова&raquo;</p>
         </div>
 
 
         <div class="links">
           <div class="footer-link">
-            <p>Исследования, Экспертиза, Консалтинг</p>
+            <p>Исследования, экспертиза, консалтинг</p>
             <a href="tel:+7 (495) 800-12-00">+7 (495) 800-12-00 (доб. 1941)</a>
             <a href="mailto: nauka@rea.ru">nauka@rea.ru</a>
           </div>
 
           <div class="footer-link">
-            <p>MBA, Повышение квалификации и Тренинги</p>
+            <p>MBA, ДПО и тренинги</p>
             <a href="tel:+7 (495) 152-85-82">+7 (495) 152-85-82 (доб. 1753)</a>
             <a href="mailto: crdpo@rea.ru">crdpo@rea.ru</a>
           </div>
@@ -121,9 +141,8 @@
         </div>
 
         <div class="bottom">
-          <p><a href="#">Официальный сайт Университета</a></p>
-          <p><a href="#">Политика конфиденциальности</a></p>
-          <p>All rights reserved</p>
+          <p><a href="https://www.rea.ru/" style="text-decoration: none;">Официальный сайт Университета</a></p>
+          <p><a href="https://do.rea.ru/politika-konfidentsialnosti" style="text-decoration: none;">Политика конфиденциальности</a></p>
         </div>
       </footer>
 
