--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <header>
-      <a href="index.html"><img src="img/logo.svg" alt="logo"></a>
+      <a href="index.html"><img src="img/logo.svg" alt="logo" style="
+        margin-top: 3px;"></a>
       <div class="call_header">
       <a href="#footer"><img src="img/call_icon.png" alt="call" 
         style="max-width: 15px;"> Контакты</a>
