--- a/reserches.html
+++ b/reserches.html
@@ -144,8 +144,8 @@
           </div>
 
           <div class="numbers">
-            <h3>>170</h3>
-            <p>научно-исследовательских проектов в год</p>
+            <h3>>3</h3>
+            <p>функционирующих научных центров на базе Университета</p>
           </div>
 
           <div class="numbers">
@@ -160,8 +160,8 @@
           </div>
 
           <div class="numbers">
-            <h3>3</h3>
-            <p>научных центра на базе Университета</p>
+            <h3>170</h3>
+            <p>научно-исследовательских проектов в год</p>
           </div>
 
           <div class="numbers">
